Added a 2nd set of mystery objects.
Fixed an issue where mystery objects were not positioned well under the mouse when created from the tool box.
Fixed an issue where a model element would be added and animated forever if the user just did one quick click on the item in the tool box.
Added highlights for the occupied tick marks on the plank.
Made the mass labels appear over the center of mass for the images, instead of just the image center.
Fixed a bug where some of the control checkboxes were not cleared upon a Reset All.
# 0.00.07 (55747) Aug 24, 2011
8/24/11 Deploying for review by design team and possibly externally
Removed, at least for now, the 2nd tab.
Made the plank so that the user can grab and tip it manually.
Made the mass labels on shapes into two lines for better readability.
Removed tick marks from bottom of ruler and added units label instead.
Made the ruler transparent.
Made the attachment bar very short - essentially looks like plank is just below the pivot.
Enlarged and finalized the level indicators.
# 0.00.06 (55247) Aug 15, 2011
8/15/11 Publishing to dev for review by design team.
Moved x's on bottoms of support columns so that the won't be overlapped by the ruler.
Removed distance vectors (a.k.a. lever arms).
Added the snap-on ruler for showing distances.
Added mass labels and the ability to turn them on/off.
Added labels for the mystery objects.
Added animation for the removal of masses from the plank.
Made the items grabbed from the teeter totter be positioned under the mouse (they were off in some cases).
Fixed issues with humans not being positioned where the center of balance is.
Fixed issue where items could be added to center of plank.
Initial usage of KitSelectionNode
# 0.00.05 (54837) Aug 3, 2011
8/3/11 Publishing updated version to dev for review.
Improved placement of the control panels.
Moved columns so that the red x wouldn't be overlapped by force vectors.