@@ -8,39 +8,42 @@ import edu.colorado.phet.common.phetcommon.model.property.BooleanProperty;
 import edu.colorado.phet.common.phetcommon.model.property.Property;
 import edu.colorado.phet.common.phetcommon.util.function.VoidFunction1;
 import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
-import edu.colorado.phet.common.piccolophet.nodes.Vector2DNode;
+import edu.colorado.phet.common.phetcommon.view.util.PhetFont;
 import edu.umd.cs.piccolo.PNode;
+import edu.umd.cs.piccolo.nodes.PText;
 
 /**
- * Class that depicts a vector that has an origin as well as x and y components,
- * and that monitors the vector and updates the representation when changes
- * occur.
+ * Class that depicts a "mystery vector", which is a vector that is presented to
+ * the user in the appropriate location but that has a fixed size and it labeled
+ * with a question mark (or some other symbol).
  *
  * @author John Blanco
  */
-public class PositionedVectorNode extends PNode {
+public class MysteryVectorNode extends PNode {
+
+    private static final int FONT_SIZE = 24;
+    private static final double Y_DIST_FROM_POSITION = 10;
 
     /**
      * Constructor.
      *
      * @param positionedVectorProperty
-     * @param scalingFactor
      * @param visibilityProperty
      * @param mvt
      */
-    public PositionedVectorNode( final Property<PositionedVector> positionedVectorProperty, double scalingFactor,
-                                 BooleanProperty visibilityProperty, final Color fillColor, final ModelViewTransform mvt ) {
-        // Create the vector node and add it as a child.
-        final Vector2DNode vectorNode = new Vector2DNode( 0, 0, 1, scalingFactor ) {{
-            setHeadSize( 15, 10 ); // Head size is arbitrary based on what looked good.
-            setArrowFillPaint( fillColor );
+    public MysteryVectorNode( final Property<PositionedVector> positionedVectorProperty,
+                              BooleanProperty visibilityProperty, final Color fillColor, final ModelViewTransform mvt ) {
+        // Create the label and add it as a child.
+        // TODO: i18n
+        final PText mysterySymbolNode = new PText( "?" ) {{
+            setFont( new PhetFont( FONT_SIZE, true ) );
         }};
-        addChild( vectorNode );
+        addChild( mysterySymbolNode );
         // Listen to the vector and update the node when changes occur.
         positionedVectorProperty.addObserver( new VoidFunction1<PositionedVector>() {
             public void apply( PositionedVector positionedVector ) {
-                vectorNode.setOffset( mvt.modelToView( positionedVectorProperty.get().origin.toPoint2D() ) );
-                vectorNode.setVector( mvt.modelToViewDelta( positionedVectorProperty.get().vector ) );
+                mysterySymbolNode.setOffset( mvt.modelToViewX( positionedVectorProperty.get().origin.getX() ) - mysterySymbolNode.getFullBoundsReference().width / 2,
+                                             mvt.modelToViewY( positionedVectorProperty.get().origin.toPoint2D().getY() ) + Y_DIST_FROM_POSITION );
             }
         } );
         // Set up visibility control.
